--- a/src/app/views/pages/campaigns/campaigns-list/campaigns-list.component.html
+++ b/src/app/views/pages/campaigns/campaigns-list/campaigns-list.component.html
@@ -161,7 +161,7 @@
 				<ng-container matColumnDef="image">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Image</mat-header-cell>
 					<mat-cell *matCellDef="let Campaigns">
-						<img src="https://donatetogo.org/public/campaigns/small/{{Campaigns.small_image}}" width='35px' height="35px" alt="campaign image">
+						<img src="https://sandbox.donatetogo.org/public/campaigns/small/{{Campaigns.small_image}}" width='35px' height="35px" alt="campaign image">
 					</mat-cell>
 				</ng-container>
 
