--- a/src/app/views/pages/members/edit-member/edit-member.component.html
+++ b/src/app/views/pages/members/edit-member/edit-member.component.html
@@ -44,11 +44,11 @@
                                 </div>
                                 <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
                                     <mat-form-field class="mat-form-field-fluid">
-                                        <input  matInput placeholder="Enter Member Email" formControlName="email" />
+                                        <input matInput placeholder="Enter Member Email" formControlName="email" />
                                         <mat-error>Member Email is
                                             <strong>required</strong>
                                         </mat-error>
-                                        <mat-hint  align="start">Please enter
+                                        <mat-hint align="start">Please enter
                                             <strong>Member Email</strong>
                                         </mat-hint>
                                     </mat-form-field>
@@ -65,11 +65,54 @@
                                                 Normal
                                             </mat-option>
                                         </mat-select>
-                                        <mat-hint  align="start">Please select
+                                        <mat-hint align="start">Please select
                                             <strong>Member Role</strong>
                                         </mat-hint>
-                                        </mat-form-field>
+                                    </mat-form-field>
                                 </div>
+                                <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
+                                    <mat-form-field class="mat-form-field-fluid">
+                                        <input type="text" matInput placeholder="Enter Member Phone"
+                                            formControlName="phone" />
+                                        <mat-error>Member phone is
+                                            <strong>required</strong>
+                                        </mat-error>
+                                        <mat-hint align="start">Please enter
+                                            <strong>Member phone number</strong>
+                                        </mat-hint>
+                                    </mat-form-field>
+                                </div>
+
+                            </div>
+                            <div class="form-group kt-form__group row">
+                                <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
+                                    <mat-form-field class="mat-form-field-fluid">
+                                        <mat-select placeholder="Select Member Country" formControlName="country">
+                                            <mat-option *ngFor="let country of allCountries" [value]="country.id">
+                                                {{country.country_name}}
+                                            </mat-option>
+
+                                        </mat-select>
+                                        <mat-hint align="start">Please select
+                                            <strong>Member Country</strong>
+                                        </mat-hint>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
+                                    <mat-form-field class="mat-form-field-fluid">
+                                        <input type="text" matInput placeholder="Enter Member Adress"
+                                            formControlName="address" />
+                                        <mat-error>Member address is
+                                            <strong>required</strong>
+                                        </mat-error>
+                                        <mat-hint align="start">Please enter
+                                            <strong>Member address</strong>
+                                        </mat-hint>
+                                    </mat-form-field>
+                                </div>
+                            </div>
+                            <div class="form-group kt-form__group row">
+
                                 <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
                                     <mat-form-field class="mat-form-field-fluid">
                                         <input type="password" matInput placeholder="Enter Member Password"
@@ -79,6 +122,18 @@
                                         </mat-error>
                                         <mat-hint align="start">Please enter
                                             <strong>Member Password</strong>
+                                        </mat-hint>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-lg-6 col-md-6 kt-margin-bottom-20-mobile">
+                                    <mat-form-field class="mat-form-field-fluid">
+                                        <input type="text" matInput placeholder="Enter Member Password"
+                                            formControlName="password_confirmation" />
+                                        <mat-error>password_confirmation is
+                                            <strong>required</strong>
+                                        </mat-error>
+                                        <mat-hint align="start">Please enter
+                                            <strong>Member password_confirmation</strong>
                                         </mat-hint>
                                     </mat-form-field>
                                 </div>
