--- a/src/app/views/pages/pages/pages/pages.component.html
+++ b/src/app/views/pages/pages/pages/pages.component.html
@@ -43,24 +43,24 @@
 				<ng-container matColumnDef="ID">
 					<!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
 					<mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-					<mat-cell *matCellDef="let Pages">{{Pages.ID}}</mat-cell>
+					<mat-cell *matCellDef="let Pages">{{Pages.id}}</mat-cell>
 				</ng-container>
 				<ng-container matColumnDef="Title">
 					<mat-header-cell *matHeaderCellDef mat-sort-header>Title</mat-header-cell>
-					<mat-cell *matCellDef="let Pages">{{Pages.Title}}</mat-cell>
+					<mat-cell *matCellDef="let Pages">{{Pages.title}}</mat-cell>
 				</ng-container>
                 <ng-container matColumnDef="Slug_URL">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Slug / URL</mat-header-cell>
-                    <mat-cell *matCellDef="let Pages">{{Pages.Slug_URL}}</mat-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Slug</mat-header-cell>
+                    <mat-cell *matCellDef="let Pages">{{Pages.slug}}</mat-cell>
                 </ng-container>
 
 				<ng-container matColumnDef="Actions">
 					<mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-					<mat-cell *matCellDef="let Categorie" class="mr-4">
-						<button (click)="editCourse(Categorie.ID)" mat-icon-button color="primary">
+					<mat-cell *matCellDef="let Pages" class="mr-4">
+						<button (click)="editPage(Pages.id)" mat-icon-button color="primary">
 							<mat-icon>create</mat-icon>
 						</button>&nbsp;
-						<button (click)="editCourse(Categorie.ID)" mat-icon-button color="primary">
+						<button (click)="deletePage(Pages.id)" mat-icon-button color="warn">
 							<mat-icon>delete</mat-icon>
 						</button>&nbsp;
 					</mat-cell>
