--- a/src/app/views/pages/categories/edit-category/edit-category.component.html
+++ b/src/app/views/pages/categories/edit-category/edit-category.component.html
@@ -1,5 +1,5 @@
 <kt-portlet>
-    <kt-portlet-header title="Edit Category" [class]="'kt-portlet__head--lg'" [viewLoading$]="loading$">
+    <kt-portlet-header title="Edit Category" [class]="'kt-portlet__head--lg'" >
         <ng-container ktPortletTools>
             <a [routerLink]="['/categories']" class="btn btn-secondary kt-margin-r-10" mat-raised-button
                 matTooltip="Back to the users list">
