--- a/src/app/views/pages/payment-setting/payment-setting/payment-setting.component.html
+++ b/src/app/views/pages/payment-setting/payment-setting/payment-setting.component.html
@@ -1,7 +1,7 @@
 <kt-portlet>
-    <kt-portlet-header [title]="etting" [class]="'kt-portlet__head--lg'" [viewLoading$]="loading$">
+    <kt-portlet-header [title]="setting" [class]="'kt-portlet__head--lg'">
         <ng-container ktPortletTools>
-            <a [routerLink]="['../']" class="btn btn-secondary kt-margin-r-10" mat-raised-button
+            <a [routerLink]="['./']" class="btn btn-secondary kt-margin-r-10" mat-raised-button
                 matTooltip="Back to the users list">
                 <i class="la la-arrow-left"></i>
                 <span class="kt-hidden-mobile">Back</span>
