--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -96,7 +96,7 @@
 				<div  *ngFor="let member of recent_members;let i=index" >
 				<div class="style-row pl-4" *ngIf="3>i">
 
-					<img src='https://donatetogo.org/public/avatar/{{member.avatar}}' class="mt-4" alt="Smiley face" width="60" height="60">
+					<img src='https://sandbox.donatetogo.org/public/avatar/{{member.avatar}}' class="mt-4" alt="Smiley face" width="60" height="60">
 
 					<div class='style-card ml-3'>
 						<i class="fas fa-genderless " style="font-size:25px; color: #1dc9b7;"></i>
@@ -126,7 +126,7 @@
 			<div class="card-body">
 				<h5 class="card-title pt-2 pl-2" style="font-size: 25px; color:#0c2074;">Recent Campaigns</h5>
 				<div class="style-row  pl-4" *ngFor="let campaign of recent_campaigns">
-					<img src='https://donatetogo.org/public/campaigns/small/{{campaign.small_image}}' class="mt-4" alt="Smiley face" width="60" height="60">
+					<img src='https://sandbox.donatetogo.org/public/campaigns/small/{{campaign.small_image}}' class="mt-4" alt="Smiley face" width="60" height="60">
 
 					<div class='style-card ml-2'>
 						<i class="fas fa-genderless " style="font-size:25px; color: #1dc9b7; "></i>
