--- a/src/app/views/pages/categories/edit-category/edit-category.component.html
+++ b/src/app/views/pages/categories/edit-category/edit-category.component.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <label for="file-upload" class="custom-file-upload fileinput-new btn btn-success btn-s">
                                     <i class="fa fa-cloud-upload"></i> Upload Image</label>
-                                <input id="file-upload" type="file" name="file" #input_image
+                                <input id="file-upload" type="file" name="upload" #input_image
                                     (change)="handleUpload($event)" formControlName="image"/>
                             </div>
                         </div>
